--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         <div class="page">
            <div id="page5">
                 <ul>
-                  <li><p style="background-color:wheat;font-family:arial;font-size:70px;text-align:center;line-height:200px;">
+                  <li><p style="background-color:white;font-family:arial;font-size:70px;text-align:center;line-height:200px;">
                     <a href="./baogao.html">综合设计报告</a></li></p>
                 </ul>
            </div> 
